@@ -2,3 +2,4 @@
 -Dconsole.encoding=UTF-8
 -Dsun.stdout.encoding=UTF-8
 -Dsun.stderr.encoding=UTF-8
+-XX:+EnableDynamicAgentLoading
